issue fixed 17432, alignment issues fonts size reduced

--- a/vtr-ui/src/app/components/ui/ui-smart-performance-scan-summary/ui-smart-performance-scan-summary.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-smart-performance-scan-summary/ui-smart-performance-scan-summary.component.scss
@@ -433,20 +433,20 @@ vtr-ui-smart-performance-scan-summary {
 									align-items: center;
 								}
 								 p{
-                                    font-size: 1.1rem;
+                                    font-size: 1.2rem;
                                     max-width: 8.1rem;
                                     margin-top: 0.6rem;
 									line-height: 1.2rem;
 									@media #{$breakpoint_sm}{
-										font-size: 1rem;
+										font-size: 0.8rem;
 										line-height: 1.2rem;
 										max-width: 100%;
 										margin-top: 0;
 									}
                                 }
                                 .icon {
-                                    font-size: 2.6rem;
-                                    margin-right: 0.8rem;
+                                    font-size: 2.4rem;
+                                    margin-right: 0.2rem;
 									color: $main;
 									@media #{$breakpoint_xl} {
 										font-size: $fontsize_xl;
